# evilang

./: Cargo.toml  README.md  build.rs  rustfmt.toml
evilang_lib/: Cargo.toml  build.rs
evilang_lib/src/lib/: errors.rs  lib.rs  parser.rs
evilang_lib/src/lib/ast/: expression.rs  mod.rs  operator.rs  statement.rs  structs.rs
evilang_lib/src/lib/interpreter/: mod.rs
evilang_lib/src/lib/interpreter/environment/: default_global_scope.rs  expression_evaluation.rs  mod.rs  resolver.rs  statement_result.rs
evilang_lib/src/lib/interpreter/environment/native_items/: mod.rs
evilang_lib/src/lib/interpreter/environment/native_items/classes/: mod.rs  object.rs  vector.rs
evilang_lib/src/lib/interpreter/runtime_values/: i_native_struct.rs  mod.rs
evilang_lib/src/lib/interpreter/runtime_values/functions/: closure.rs  ifunction.rs  mod.rs  native_function.rs  types.rs
evilang_lib/src/lib/interpreter/runtime_values/objects/: mod.rs  runtime_object.rs
evilang_lib/src/lib/interpreter/runtime_values/ref_to_value/: deref_of_ref_to_value.rs  mod.rs
evilang_lib/src/lib/interpreter/utils/: cell_ref.rs  consts.rs  mod.rs
evilang_lib/src/lib/interpreter/variables_containers/: map.rs  mod.rs  scope.rs
evilang_lib/src/lib/semantic/: captured_variables.rs  mod.rs
evilang_lib/src/lib/tokenizer/: matchers.rs  mod.rs  token.rs
evilang_lib/src/lib/types/: cell_ref.rs  consts.rs  mod.rs  number.rs  string.rs  traits.rs
evilang_proc_macros/: Cargo.toml
evilang_proc_macros/src/: lib.rs
evilang_proc_macros/src/derive_build_class/: mod.rs
evilang_proc_macros/src/utils/: crate_imports.rs  mod.rs
evilang_proc_macros/src/utils/attributes/: mod.rs
evilang_traits/: Cargo.toml
evilang_traits/src/: lib.rs
resources/: for_loop.evil  functions.evil
resources/tests/common/: index.evil
resources/tests/import_test/: main.evil
resources/tests/import_test/sub/: point.evil  sub_file_1.evil
resources/tests/vector_test/: main.evil
src/: main.rs
src/cli/: mod.rs
src/evilang_files/: main.evil  main_adj.evil
src/evilang_files/sub/sub_2/: sub_2_file_1.evil
src/lib/: ast.rs  errors.rs  lib.rs  parser.rs  tokenizer.rs
src/lib/ast/: expression.rs  mod.rs  operator.rs  statement.rs  structs.rs
src/lib/interpreter/: environment.rs  mod.rs  runtime_value.rs  variables_map.rs
src/lib/interpreter/environment/: default_global_scope.rs  enums.rs  expression_evaluation.rs  mod.rs  resolver.rs  statement_result.rs
src/lib/interpreter/environment/native_functions/: mod.rs
src/lib/interpreter/runtime_values/: mod.rs  ref_to_value.rs
src/lib/interpreter/runtime_values/functions/: closure.rs  (+4 more)
src/lib/interpreter/utils/: cell_ref.rs  consts.rs  consume_or_clone.rs  mod.rs
src/lib/interpreter/variables_containers/: map.rs  mod.rs  scope.rs
src/lib/math/: number.rs
src/lib/tokenizer/: matchers.rs  mod.rs  token.rs
src/lib/types/: string.rs
src/lib/utils/: cell_ref.rs  mod.rs
tests/: assignment.rs  block_scoping.rs  classes_and_new.rs  closure_capture_tests.rs  equality_operators.rs  floating_point_math.rs  function_call.rs  function_execution.rs  functions.rs  if_statement.rs  literals.rs  logical_operators.rs  loops.rs  math.rs  member_access.rs  namespaces.rs  relational_operators.rs  statement.rs  unary_operators.rs  variable_declarations.rs  vector.rs
tests/common/: mod.rs
(+4 files in other folders)
