[package]
name = "evilang"
version = "0.1.0"
edition = "2021"
authors = ["Aryan Chudasama"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { version = "1.0.71", features = ["backtrace"] }
backtrace = "0.3.68"
clap = { version = "4.3.21", features = ["derive"] }
const-str = "0.5.6"
debug-ignore = "1.0.5"
delegate = "0.10.0"
derivative = "2.2.0"
either = "1.9.0"
extend = "1.2.0"
gc = { version = "0.5.0", features = ["derive", "gc_derive"] }
lazy_static = "1.4.0"
once_cell = "1.18.0"
regex = "1.9.1"
static_assertions = "1.1.0"
thiserror = "1.0.43"
unicode-segmentation = "1.10.1"

[lib]
name = "evilang_lib"
path = "src/lib/lib.rs"

[[bin]]
name = "evilang_main"
path = "src/main.rs"
