[workspace]
members = ["evilang_traits", "evilang_lib", "evilang_proc_macros"]

[package]
name = "evilang"
version = "0.1.0"
edition = "2021"
authors = ["Aryan Chudasama"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "4.3.23"
evilang_lib = {version = "0.1.0", path = "evilang_lib"}
evilang_traits = {version = "0.1.0", path = "evilang_traits"}

[[bin]]
name = "evilang_main"
path = "src/main.rs"
