[package]
name = "evilang_lib"
version = "0.1.0"
edition = "2021"


[dependencies]
anyhow = { version = "1.0.71", features = ["backtrace"] }
backtrace = "0.3.68"
clap = { version = "4.3.21", features = ["derive"] }
const-str = "0.5.6"
delegate = "0.10.0"
gc = { version = "0.5.0", features = ["derive", "gc_derive"] }
num-traits = "0.2.16"
regex = "1.9.1"
static_assertions = "1.1.0"
thiserror = "1.0.43"
evilang_traits = { path = "../evilang_traits", version = "0.1.0" }

[lib]
name = "evilang_lib"
path = "src/lib/lib.rs"
