[package]
name = "evilang_proc_macros"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
syn = { version = "2.0.29", features = ["fold", "extra-traits", "test", "visit", "visit-mut", "full"] }
synstructure = "0.13.0"
proc-macro2 = "1.0.66"
quote = "1.0.33"

[lib]
name = "evilang_proc_macros"
proc-macro = true
