[package]
name = "evilang_traits"
version = "0.1.0"
edition = "2021"

[features]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
evilang_proc_macros = { path = "../evilang_proc_macros", version = "0.1.0" }

[lib]
name = "evilang_traits"
